k8s_Spring_Boot_HelloWorld/Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-webapp-service

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: hello-world-webapp

  ports:
    - name: http
      port: 8080
      nodePort: 31080

  type: NodePort
